Project Restructure Complete
WebServer
 + There are three interfaces for models rather than one
    `IDataModel` used for values when building Views
    `IPageModel` used to return HttpResponses from a class
    `IPageComponentModel` used to render Classes into Views more easily
Portfolio
 + Removed Unused Views/Classes
 + `OrgProjectPageModel` has been merged into `ProjectPageModel`
 + Reorginized and restructured the project to make it more MVC style
 + You can now use models more conviniently now, since the model (if it is a IPageComponentModel) will now be responsible for getting the view, you can still use the model for other Views if needed.
 + DevLog was created, everything including project refrences works, except one-way, projects cannot show DevLogs that mentioned them yet. And posts cannot refer to other posts either.
This closes #9 and #7

--- a/PrivateTemplates/kavemans.dev/DevLog/_EntryLayout.html
+++ b/PrivateTemplates/kavemans.dev/DevLog/_EntryLayout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Devlog</title>
+    <title>{?:Post.TitleText} - kavemans.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
@@ -19,22 +19,16 @@
       <main class="container centerize">
         <model src="kavemans.dev/announcements"></model>
         <h2 style="margin-block-end: 0;">
-          {?:TitleText}
+          {?:Post.TitleText}
           <span class="tags">{?:Tags}</span>
           <!--<span class="tags"><span class="tag">Web Development</span><span class="tag">Backend Development</span></span>-->
           <!--<span class="tags"><span class="tag">Unity</span><span class="tag">C#</span><span class="tag">Multiplayer</span><span class="tag">Video</span></span>-->
-          <span style="margin-top: 4px;">Last Updated on {?:LastUpdatedDate}</span>
+          <span style="margin-top: 4px;">Last Updated on {?:Post.LastUpdatedDate}</span>
         </h2>
-        <div class="dynamicMargin md">{?:ContentMarkdown}</div>
+        <div class="dynamicMargin md">{?:Post.ContentMarkdown}</div>
       </main>
-      <div class="container centerize hr">
-        <h2 style="margin-block-end: 0;">Refrenced Projects<span>Project this post referred to</span></h2>
-        <div class="feed dynamicMargin">{?:RefrencedProjects}</div>
-      </div>
-      <div class="container centerize hr">
-        <h2>You may also like<span>Other posts that have similar tags</span></h2>
-        <div class="feed dynamicMargin">{?:OtherPosts}</div>
-      </div>
+      {?:ProjectsContainer}
+      {?:OtherPosts}
     </div>
     <model src="kavemans.dev/footer.html"></model>
   </body>
