--- a/PrivateTemplates/kavemans.dev/ProjectPage/_Layout.html
+++ b/PrivateTemplates/kavemans.dev/ProjectPage/_Layout.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-	<meta charset="UTF-8">
-	<title>{?:Organization.Name} - kavemans.dev</title>
+    <meta charset="UTF-8">
+    <title>{?:Project.Name} - {?:SubHeader}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/orgOverrides.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/projectOverrides.css" type="text/css" rel="stylesheet" />
     <model src="kavemans.dev/FontAwesome"></model>
-    <style>
-      .overview > .dynamicMargin > p:nth-child(1)  {
-        margin-top: 0;
-      }
-    </style>
   </head>
   <body>
     <model src="kavemans.dev/header.html"></model>
     <div class="contentWrapper">
-      <main id="simpleParallaxEffect" class="centerize" style="--background-image: url('/src/orgs/{?:Organization.UrlName}.Header.webp'); --background-y-anchor: 40%;">
-        <div class="intro dynamicMargin" style="--background-image: url('/src/orgs/{?:Organization.UrlName}.webp');">
-          <span>{?:Organization.Name} Projects</span>
-          {?:OrganizationLinks}
-          <!--{?:BriefText}-->
+      <main id="simpleParallaxEffect" class="centerize"
+        style="--background-image: url('{?:BackgroundUrl}'); --background-y-anchor: {?:Project.HeaderVerticalAnchorOverride}%;">
+        <div class="intro dynamicMargin" style="--background-image: url('{?:LogoUrl}');">
+          <span>{?:Project.Name}</span>
+          <span class="linksBox centerize">
+            {?:ProjectLinks}
+            <span style="display: block; width: 100%;">{?:Project.BriefText}</span>
+          </span>
         </div>
       </main>
       <div class="container showBorder centerize" style="margin-bottom: 0;">
         <div class="dynamicMargin">
-          <a href="/">Home</a> / <a href="/projects">Projects</a> / {?:Organization.Name}
+          <a href="/">Home</a> / <a href="/projects">Projects</a> {?:OrganizationLinkElement} / {?:Project.Name}
         </div>
       </div>
-      <div class="container centerize overview">
-        <h2>Overview<span>{?:OverviewSubtitle}</span></h2>
-        <div class="dynamicMargin">{?:Organization.OverviewMarkdown}</div>
+      <div class="container centerize">
+        <h2>Project Details<span>Info behind this project</span></h2>
+        <div class="dynamicMargin">{?:Project.OverviewMarkdown}</div>
       </div>
-      <div class="container centerize hr">
-        <h2>Projects<span>Most recent shown first</span></h2>
-        {?:Projects}
+      <div id="projects" class="container centerize hr">
+        <h2>Technologies Used<span>What engines, frameworks and tools were used</span></h2>
+        {?:TechnologiesUsed}
       </div>
+      {?:MediaContainer}
     </div>
     <model src="kavemans.dev/footer.html"></model>
     <script src="/src/scripts/KeyFirePlugin.js"></script>
@@ -49,4 +49,5 @@
       );
     </script>
   </body>
+
 </html>
